--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "git-revision-webpack-plugin": "^3.0.4",
+    "glob-all": "^3.2.1",
+    "purgecss-webpack-plugin": "^2.1.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
