--- a/.github/workflows/publishing-staging.yml
+++ b/.github/workflows/publishing-staging.yml
@@ -28,10 +28,10 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Getting the image tag
-      run: if [ ${{ github.event_name }} = 'pull_request' ]; then tag=pr-${{ github.event.number }}; else tag='staging'; fi; echo ::set-env name=IMAGE_TAG::$tag
+      run: if [ ${{ github.event_name }} = 'pull_request' ]; then tag=pr-${{ github.event.number }}; else tag='staging'; fi; echo IMAGE_TAG=$tag >> $GITHUB_ENV
 
     - name: Getting the complete ECR URI
-      run: echo ::set-env name=ECR_URI::${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ env.IMAGE_TAG }}
+      run: echo ECR_URI=${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ env.IMAGE_TAG }} >> $GITHUB_ENV
 
     - name: Build, and push image to Amazon ECR
       run: |
