--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
